2006-08-27 [colin]	0.4.15cvs2

	* src/fetchinfo_plugin.c
		Implement plugin_provides()

2006-08-18 [paul]	0.4.15cvs1

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-06-12 [paul]	0.4.15

	0.4.15 released

2006-06-06 [wwp]	0.4.14cvs2

	* configure.ac
	* src/Makefile.am
	* src/.cvsignore
	* src/plugin_version.h.in
	* src/fetchinfo_plugin.c
	* src/fetchinfo_plugin_gtk.c
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead),
		removed extra linefeed in plugin info text.


2006-06-03 [wwp]	0.4.14cvs1

	* commitHelper
	* PATCHSETS
	* configure.ac
		introducing commitHelper for plugins too.

2006-05-17 [wwp] 0.4.14

	* src/fetchinfo_plugin.c
	* src/fetchinfo_plugin_gtk.c
		Updated sylpheed-claws product name.

2006-04-07 [colin] 	0.4.13

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2006-02-22 [wwp]    0.4.12

	* src/fetchinfo_plugin.c
		Don't warn if plugin is disabled. Replaced a reference to Sylpheed
		with Sylpheed-Claws.

	* Changelog
	* configure.ac
		Bumped version to 0.4.12

2006-02-21 [wwp]    0.4.11

	* src/fetchinfo_plugin.c
		Fixed plugin preferences loading (bugzilla item #915)

	* Changelog
	* configure.ac
		Bumped version to 0.4.11

2005-12-15 [paul]	0.4.10

	* Add plugin_version()

2005-12-14 [paul]	0.4.9

	src/fetchinfo_plugin_gtk.c
		fix typo in plugin_licence()

2005-12-13 [colin]      0.4.8

	* Add plugin_licence() to fetchinfo_plugin_gtk as well
	
2005-12-07 [colin]      0.4.7

	* Add plugin_licence()
	
2005-07-15 [paul]	0.4.6

	* configure.ac	
	* src/Makefile.am
	* src/fetchinfo_plugin.c
	* src/fetchinfo_plugin_gtk.c
	* src/fetchinfo_plugin_gtk.deps	* NEW *
		GTK2 port
		add dep
	
2004-12-06 [thorsten]	0.4.5

	* src/fetchinfo_plugin.c
		update data_len (truncated messages)
		Thanks to Colin Leroy for the hint

2004-12-06 [thorsten]	0.4.4

	* src/fetchinfo_plugin.c
	  src/fetchinfo_plugin_gtk.c
	  	check sylpheed version >= 0.9.12
